--- a/index.html
+++ b/index.html
@@ -347,10 +347,34 @@
       "mainEntity": [
         {
           "@type": "Question",
+          "name": "世田谷区の地震に強くて家賃も抑えめのエリアは？",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "南烏山2丁目は、利便性と住環境のバランスが取れた人気エリアです。"
+          }
+        },
+        {
+          "@type": "Question",
           "name": "中央区の地震に強くて家賃も抑えめのエリアは？",
           "acceptedAnswer": {
             "@type": "Answer",
             "text": "日本橋小網町は、都心の利便性を活かしながら住めるエリアとしておすすめです。"
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "中野区の地震に強くて家賃も抑えめのエリアは？",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "江古田3丁目は、都営大江戸線 新江古田駅が利用でき、家賃も手頃なエリアとしておすすめです。"
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "北区の地震に強くて家賃も抑えめのエリアは？",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "赤羽北3丁目と桐ケ丘2丁目は、JR埼京線 北赤羽駅が利用でき、家賃も手頃なエリアとしておすすめです。"
           }
         },
         {
@@ -363,12 +387,148 @@
         },
         {
           "@type": "Question",
+          "name": "台東区の地震に強くて家賃も抑えめのエリアは？",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "上野桜木1丁目は地盤が安定しているエリアです。"
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "品川区の地震に強くて家賃も抑えめのエリアは？",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "東大井4丁目は、地盤が安定しており、複数路線が利用できる便利なエリアです。"
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "墨田区の地震に強くて家賃も抑えめのエリアは？",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "江東橋3丁目と江東橋4丁目は、錦糸町駅と住吉駅が利用でき、利便性の高いエリアです。"
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "大田区の地震に強くて家賃も抑えめのエリアは？",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "南千束2丁目は、大岡山駅・北千束駅・洗足池駅が利用でき、交通アクセスの良いエリアとしておすすめです。"
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "文京区の地震に強くて家賃も抑えめのエリアは？",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "本駒込6丁目は、駒込駅・巣鴨駅・千石駅が利用でき、交通アクセスの良いエリアとしておすすめです。"
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "新宿区の地震に強くて家賃も抑えめのエリアは？",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "下落合2丁目は、高田馬場駅・目白駅・下落合駅が利用でき、利便性の高いエリアとしておすすめです。"
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "杉並区の地震に強くて家賃も抑えめのエリアは？",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "井草3丁目・井草4丁目は、井荻駅と上井草駅が利用でき、落ち着いた住環境が魅力のエリアです。"
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "板橋区の地震に強くて家賃も抑えめのエリアは？",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "小豆沢1丁目は、志村坂上駅と本蓮沼駅が利用でき、生活利便性が高いエリアです。"
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "江戸川区の地震に強くて家賃も抑えめのエリアは？",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "西葛西5丁目は、西葛西駅が利用でき、交通アクセスと住環境のバランスが取れたエリアです。"
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "江東区の地震に強くて家賃も抑えめのエリアは？",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "東陽2丁目・東陽4丁目・東陽6丁目・東陽7丁目は、東陽町駅が利用できる便利なエリアです。"
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "渋谷区の地震に強くて家賃も抑えめのエリアは？",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "大山町は、代々木上原駅・東北沢駅が徒歩圏内の利便性が高いエリアです。"
+          }
+        },
+        {
+          "@type": "Question",
           "name": "港区の地震に強くて家賃も抑えめのエリアは？",
           "acceptedAnswer": {
             "@type": "Answer",
             "text": "高輪3丁目・高輪4丁目は、複数路線が利用できるアクセスの良さと、落ち着いた住環境が魅力のエリアです。"
           }
         },
+        {
+          "@type": "Question",
+          "name": "目黒区の地震に強くて家賃も抑えめのエリアは？",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "碑文谷2丁目・碑文谷3丁目・碑文谷4丁目・碑文谷5丁目は、落ち着いた住宅街で人気の高いエリアです。"
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "練馬区の地震に強くて家賃も抑えめのエリアは？",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "光が丘1～7丁目、高松5丁目・高松6丁目は、光が丘エリアとして人気の高い地域です。"
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "荒川区の地震に強くて家賃も抑えめのエリアは？",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "荒川8丁目は、周辺環境が整っており、家賃も控えめでおすすめのエリアです。"
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "葛飾区の地震に強くて家賃も抑えめのエリアは？",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "西新小岩1丁目・西新小岩2丁目は、新小岩駅から近く、利便性の高いエリアとしておすすめです。"
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "豊島区の地震に強くて家賃も抑えめのエリアは？",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "西池袋3丁目は、池袋駅にも近く、利便性と住みやすさを兼ね備えたエリアとしておすすめです。"
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "足立区の地震に強くて家賃も抑えめのエリアは？",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "西加平2丁目は、六町駅に近く、バランスの取れた住環境が魅力のエリアです。"
+          }
+        }
       ]
     }
     </script>
