--- a/index.html
+++ b/index.html
@@ -39,37 +39,30 @@
             <li><a href="otoiawase.html">お問合せ</a></li>
         </ul>
     </nav>
+    <h2>ランキング形式で見れる地震危険度表</h2>
     <ul>
-        <li>使い方: 引っ越し時など、住む場所を探すのに役立てていただければ幸いです。区・地盤・危険度・路線などでフィルタをかけたり、家賃でソートしたりといった使い方ができます。</li>
-        <li>地盤・危険度の出典: <cite><a href="https://www.funenka.metro.tokyo.lg.jp/area-hazard-level/regional-risk-list/">東京都不燃化ポータルサイト 地域危険度一覧表</a></cite></li>
+        <li><strong>使い方:</strong> 引っ越しや不動産購入時の参考に。地盤の強さ・地震危険度・路線・家賃などの条件でフィルタをかけ、最適なエリアを見つけられます。また、地震危険度や家賃でソートすることで、ランキング形式で参照することもできます。</li>
+        <li><strong>地盤・危険度の出典:</strong> <cite><a href="https://www.funenka.metro.tokyo.lg.jp/area-hazard-level/regional-risk-list/">東京都不燃化ポータルサイト 地域危険度一覧表</a></cite></li>
     </ul>
-    <details>
-        <summary>地盤の説明</summary>
-        <ul>
-            <li>台地: 固く揺れが少ない地盤</li>
-            <li>沖積低地: 土砂が堆積して形成された軟弱な地盤</li>
-            <li>谷底低地: 台地の間にある谷底の軟弱な地盤</li>
-            <li>末尾の数字が小さいほど揺れも小さい</li>
-        </ul>
-    </details>
-    <details>
-        <summary>危険度の説明</summary>
-        <ul>
-            <li>1〜5に分類されており、数字が小さいほど安全です。</li>
-        </ul>
-    </details>
+    <h3>地盤の種類と安全性</h3>
     <ul>
-        <li>家賃の出典: <cite><a href="https://suumo.jp/chintai/soba/tokyo/ensen/">SUUMO 東京都の路線・沿線から家賃相場・賃料相場情報を探す</a></cite></li>
+        <li><strong>台地:</strong> 固く揺れが少ない地盤（地震に強い）</li>
+        <li><strong>沖積低地:</strong> 土砂が堆積した軟弱地盤（揺れやすい）</li>
+        <li><strong>谷底低地:</strong> 台地の間にある谷底の軟弱な地盤（液状化リスクあり）</li>
+        <li><strong>数字が小さいほど安全:</strong> 末尾の数字が小さいほど揺れが少ない</li>
     </ul>
-    <details>
-        <summary>家賃の計算</summary>
-        <ul>
-            <li>駅ごとの1LDK/2LDK/2DKの家賃相場をもとに計算しています。</li>
-            <li>同じ町内に複数の最寄り駅がある場合は、距離の近さを重みとした加重平均を使用。</li>
-        </ul>
-    </details>
+    <h3>地震危険度の基準とは？</h3>
+    <ul>
+        <li>1〜5のランクに分類され、<strong>数字が小さいほど安全な地域</strong>。</li>
+        <li>「耐震性」「火災危険度」「避難のしやすさ」などを総合評価。</li>
+    </ul>
+    <h3>家賃相場ランキングとデータの出典</h3>
+    <ul>
+        <li><strong>出典:</strong> <cite><a href="https://suumo.jp/chintai/soba/tokyo/ensen/">SUUMO 東京都の路線・沿線から家賃相場を探す</a></cite></li>
+        <li>1LDK/2LDK/2DKの家賃相場をもとに計算。</li>
+        <li>複数の最寄り駅がある場合は、距離の近さを考慮し加重平均。</li>
+    </ul>
     <div id="loading">読み込み中...</div>
-
     <div class="content" style="display:none;">
         <aside class="sidebar">
             <section class="option_box">
