--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <li>1〜5のランクに分類され、<strong>数字が小さいほど安全な地域</strong>。</li>
         <li>「耐震性」「火災危険度」「避難のしやすさ」などを総合評価。</li>
     </ul>
-    <h3>家賃相場ランキングとデータの出典</h3>
+    <h3>家賃相場の出典</h3>
     <ul>
         <li><strong>出典:</strong> <cite><a href="https://suumo.jp/chintai/soba/tokyo/ensen/">SUUMO 東京都の路線・沿線から家賃相場を探す</a></cite></li>
         <li>1LDK/2LDK/2DKの家賃相場をもとに計算。</li>
