--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>東京23区の地震に強い街を徹底比較｜家賃・駅情報付きで安心のエリア探し</title>
+    <title>東京23区の地震に強い地域を徹底比較｜家賃・駅情報付きで安心のエリア探し</title>
 
     <!-- DataTables & Extensions CSS -->
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css">
@@ -30,7 +30,7 @@
 </head>
 
 <body>
-    <h1>東京23区の地震に強い街を徹底比較｜家賃・駅情報付きで安心のエリア探し</h1>
+    <h1>東京23区の地震に強い地域を徹底比較｜家賃・駅情報付きで安心のエリア探し</h1>
     <nav>
         <ul class="menu">
             <li><a href="index.html">危険度表</a></li>
@@ -41,7 +41,7 @@
     </nav>
     <h2>ランキング形式で見れる地震危険度表</h2>
     <ul>
-        <li><strong>使い方:</strong> 引っ越しや不動産購入時の参考に。地盤の強さ・地震危険度・路線・家賃などの条件でフィルタをかけ、最適なエリアを見つけられます。また、地震危険度や家賃でソートすることで、ランキング形式で参照することもできます。</li>
+        <li><strong>使い方:</strong> 引っ越しや不動産購入時の参考になれば幸いです。地盤の強さ・地震危険度・路線・家賃などの条件でフィルタをかけ、町丁名レベルの住所単位で、最適なエリアを見つけられます。また、地震危険度や家賃でソートすることで、ランキング形式で参照することもできます。</li>
         <li><strong>地盤・危険度の出典:</strong> <cite><a href="https://www.funenka.metro.tokyo.lg.jp/area-hazard-level/regional-risk-list/">東京都不燃化ポータルサイト 地域危険度一覧表</a></cite></li>
     </ul>
     <h3>地盤の種類と安全性</h3>
@@ -54,7 +54,7 @@
     <h3>地震危険度の基準とは？</h3>
     <ul>
         <li>1〜5のランクに分類され、<strong>数字が小さいほど安全な地域</strong>。</li>
-        <li>「耐震性」「火災危険度」「避難のしやすさ」などを総合評価。</li>
+        <li>「建物倒壊危険度」「火災危険度」および、これらをあわせた「総合危険度」で評価。</li>
     </ul>
     <h3>家賃相場の出典</h3>
     <ul>
