--- a/otoiawase.html
+++ b/otoiawase.html
@@ -15,7 +15,7 @@
     </script>
 </head>
 <body>
-    <h1>東京23区の地震に強い街を徹底比較｜家賃・駅情報付きで安心のエリア探し</h1>
+    <h1>東京23区の地震に強い地域を徹底比較｜家賃・駅情報付きで安心のエリア探し</h1>
     <h2>お問い合わせフォーム</h2>
     <nav>
         <ul class="menu">
