--- a/osusume_area.html
+++ b/osusume_area.html
@@ -117,16 +117,16 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr><td>中央区</td><td>日本橋茅場町1丁目</td><td>沖積低地2</td><td>1</td><td>茅場町 日本橋 水天宮前</td><td>東京メトロ半蔵門線 東京メトロ銀座線 東京メトロ東西線 都営浅草線 東京メトロ日比谷線</td><td>17.1</td></tr>
                     <tr><td>中央区</td><td>日本橋小網町</td><td>沖積低地2</td><td>1</td><td>茅場町 人形町 水天宮前</td><td>都営浅草線 東京メトロ東西線 東京メトロ日比谷線 東京メトロ半蔵門線</td><td>17.1</td></tr>
                     <tr><td>中央区</td><td>京橋1丁目</td><td>沖積低地2</td><td>1</td><td>宝町 京橋 日本橋</td><td>東京メトロ銀座線 都営浅草線 東京メトロ東西線</td><td>17.7</td></tr>
-                    <tr><td>中央区</td><td>日本橋本石町1丁目</td><td>沖積低地2</td><td>1</td><td>三越前 日本橋 新日本橋</td><td>JR総武線快速 東京メトロ銀座線 東京メトロ東西線 東京メトロ半蔵門線</td><td>17.7</td></tr>
                     <tr><td>中央区</td><td>日本橋室町2丁目</td><td>沖積低地2</td><td>1</td><td>三越前 日本橋 新日本橋</td><td>JR総武線快速 東京メトロ銀座線 東京メトロ東西線 東京メトロ半蔵門線</td><td>17.7</td></tr>
-                    <tr><td>中央区</td><td>日本橋本石町3丁目</td><td>沖積低地2</td><td>1</td><td>三越前 神田 新日本橋</td><td>JR山手線 東京メトロ半蔵門線 JR総武線快速 JR京浜東北線 東京メトロ銀座線 JR中央線</td><td>17.8</td></tr>
-                    <tr><td>中央区</td><td>日本橋室町3丁目</td><td>沖積低地2</td><td>1</td><td>三越前 神田 新日本橋</td><td>JR山手線 東京メトロ半蔵門線 JR総武線快速 JR京浜東北線 東京メトロ銀座線 JR中央線</td><td>17.8</td></tr>
-                    <tr><td>中央区</td><td>日本橋本石町2丁目</td><td>沖積低地2</td><td>1</td><td>三越前 大手町 新日本橋</td><td>東京メトロ半蔵門線 JR総武線快速 東京メトロ銀座線 東京メトロ東西線 東京メトロ丸ノ内線</td><td>18.3</td></tr>
                     <tr><td>中央区</td><td>八重洲2丁目</td><td>沖積低地2</td><td>1</td><td>宝町 京橋 銀座一丁目</td><td>東京メトロ銀座線 都営浅草線 東京メトロ有楽町線</td><td>18.3</td></tr>
                     <tr><td>中央区</td><td>勝どき1丁目</td><td>沖積低地2</td><td>1</td><td>勝どき</td><td>都営大江戸線</td><td>18.4</td></tr>
+                    <tr><td>中央区</td><td>勝どき5丁目</td><td>沖積低地2</td><td>1</td><td>勝どき</td><td>都営大江戸線</td><td>18.4</td></tr>
+                    <tr><td>中央区</td><td>勝どき6丁目</td><td>沖積低地2</td><td>1</td><td>勝どき</td><td>都営大江戸線</td><td>18.4</td></tr>
+                    <tr><td>中央区</td><td>晴海1丁目</td><td>沖積低地2</td><td>1</td><td>月島</td><td>東京メトロ有楽町線 都営大江戸線</td><td>18.4</td></tr>
+                    <tr><td>中央区</td><td>晴海3丁目</td><td>沖積低地2</td><td>1</td><td>勝どき</td><td>都営大江戸線</td><td>18.4</td></tr>
+                    <tr><td>中央区</td><td>晴海4丁目</td><td>沖積低地2</td><td>1</td><td>勝どき（徒歩10分圏外）</td><td>都営大江戸線</td><td>18.4</td></tr>
                 </tbody>
             </table>
         </details>
