--- a/osusume_area.html
+++ b/osusume_area.html
@@ -97,6 +97,9 @@
         <p><strong>千歳烏山駅前</strong>を中心に、カフェやレストラン、居酒屋などバラエティ豊かな飲食店が点在しています。</p>
         <h3>自然環境</h3>
         <p>近隣には<strong>蘆花恒春園</strong>などの大きな公園もあり、自然を身近に感じることができます。</p>
+        <h3>その他 おすすめエリア</h3>
+        <p><strong>勝どき1・5・6丁目</strong>・<strong>晴海1～4丁目</strong>は、新しいマンションが多く、耐震性能が高い建物がそろっているため、安心して暮らせるエリアです。</p>
+        <p>詳しい住みやすさの情報については、こちらのサイト（<cite><a href="https://harumi-life.com/">のんびり晴海ライフ</a></cite>で紹介されています。実際に住んでいる方の視点で書かれたレビューも豊富なので、<strong>勝どき</strong>・<strong>晴海エリア</strong>の住みやすさのすべてがわかります。</p>
     </div>
 
     <div class="section-box">
