--- a/osusume_area.html
+++ b/osusume_area.html
@@ -143,7 +143,7 @@
         <p>近隣には<strong>隅田川テラス</strong>があり、散歩やジョギングに適した環境が整っています。</p>
         <h3>その他 おすすめエリア</h3>
         <p><strong>勝どき1・5・6丁目</strong>・<strong>晴海1～4丁目</strong>は、新しいマンションが多く、耐震性能が高い建物がそろっているため、安心して暮らせるエリアです。</p>
-        <p>詳しい住みやすさの情報については、こちらのサイト（<cite><a href="https://harumi-life.com/">のんびり晴海ライフ</a></cite>で紹介されています。実際に住んでいる方の視点で書かれたレビューも豊富なので、<strong>勝どき</strong>・<strong>晴海エリア</strong>の住みやすさのすべてがわかります。</p>
+        <p>詳しい住みやすさの情報については、こちらのサイト （<cite><a href="https://harumi-life.com/">のんびり晴海ライフ</a></cite>） で紹介されています。実際に住んでいる方の視点で書かれたレビューも豊富なので、<strong>勝どき</strong>・<strong>晴海エリア</strong>の住みやすさのすべてがわかります。</p>
     </div>
 
     <div class="section-box">
