--- a/osusume_area.html
+++ b/osusume_area.html
@@ -88,7 +88,7 @@
         </details>
         <p>中でも<strong>南烏山2丁目</strong>は、利便性と住環境のバランスが取れた人気エリアです。</p>
         <p><strong>千歳烏山駅前</strong>には商店街<strong>えるもーる烏山</strong>があり、非常に便利です。</p>
-        <p>こちらのサイト （<b><cite><a href="https://harumi-life.com/">えるもーる烏山 公式サイト</a></cite></b>） で商店街についてや、<strong>千歳烏山エリア</strong>の住みやすさを知ることができます。</p>
+        <p>こちらのサイト （<b><cite><a href="https://www.elmall.or.jp/">えるもーる烏山 公式サイト</a></cite></b>） で商店街についてや、<strong>千歳烏山エリア</strong>の住みやすさを知ることができます。</p>
         <h3>治安の良さ</h3>
         <p><strong>南烏山2丁目</strong>は、閑静な住宅街で、落ち着いた街並みが広がり、治安も良好です。</p>
         <h3>交通アクセス</h3>
