--- a/osusume_area.html
+++ b/osusume_area.html
@@ -257,7 +257,8 @@
                 </tbody>
             </table>
         </details>
-        <p>特に<strong>神田駿河台</strong>と<strong>神田猿楽町</strong>は、交通利便性が高く、周辺に大学や文化施設が多いエリアです。</p>
+        <p>特に<strong>神保町エリア</strong>の<strong>神田駿河台</strong>と<strong>神田猿楽町</strong>は、交通利便性が高いのに併せて、文化的な雰囲気を楽しめるエリアです。</p>
+        <p>こちらのサイト （<b><cite><a href="https://www.kochira-jinbocho.jp/">神田神保町の情報サイト こちら神保町</a></cite></b>） で<strong>神保町エリア</strong>の歴史・グルメ・イベント情報などを知ることができます。</p>
         <h3>治安の良さ</h3>
         <p>オフィス街に近いこともあり、昼間は人通りが多く賑やかなエリアですが、住宅街の治安は比較的良好です。学生やビジネスマンが多く、落ち着いた環境が整っています。</p>
         <h3>交通アクセス</h3>
