--- a/kanji.html
+++ b/kanji.html
@@ -22,6 +22,7 @@
         <ul class="menu">
             <li><a href="index.html">危険度表</a></li>
             <li><a href="osusume_area.html">【危険度・家賃から見る】おすすめエリア</a></li>
+            <li><a href="blog_list.html">地震危険度に関する記事</a></li>
             <li><a href="privacy_policy.html">プライバシーポリシー</a></li>
             <li><a href="otoiawase.html">お問合せ</a></li>
         </ul>
@@ -32,6 +33,7 @@
     <p>特に東京都のように地震リスクが高い地域では、地盤や建物密集度など、地域ごとの「危険度」にはハッキリ差があることが、行政の公開データからも分かってきています。</p>
     <p>そこで今回は、東京都23区の町丁目別に公表されている「建物倒壊危険度」「火災危険度」「総合危険度」のデータをもとに、地名に含まれる“漢字”ごとに、その危険度の傾向を分析してみました。</p>
     <p>「水に関する漢字は危ない」といった話はよく耳にしますが、実際にデータで検証するとどうなのでしょうか？</p>
+    <p><strong>地盤・危険度の出典:</strong> <cite><a href="https://www.funenka.metro.tokyo.lg.jp/area-hazard-level/regional-risk-list/">東京都不燃化ポータルサイト 地域危険度一覧表</a></cite></p>
 
 
     <h2>どうやって分析したの？</h2>
