--- a/otoiawase.html
+++ b/otoiawase.html
@@ -21,6 +21,8 @@
         <ul class="menu">
             <li><a href="index.html">危険度表</a></li>
             <li><a href="osusume_area.html">【危険度・家賃から見る】おすすめエリア</a></li>
+            <li><a href="blog_list.html">地震危険度に関する記事</a></li>
+          <li><a href="privacy_policy.html">プライバシーポリシー</a></li>
             <li><a href="otoiawase.html">お問合せ</a></li>
         </ul>
     </nav>
